# pathvisio

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.txt  CITATION.cff  CLASSPATH  CODE_OF_CONDUCT.md  CONTRIBUTORS.txt  GMML_compat.xsd  GPML.xsd  Info.plist  NOTICE.txt  SciTE.properties  add_license_header.sh  biopax-level2.owl  build-common.xml  build.xml  convert.pl  diffview.sh  gmml-visio.bat  gmml-visio.iss  gmml-visio.sh  gpmldiff.sh  gpmlpatch.sh  pathvisio.bat  pathvisio.iss  pathvisio.sh  pathvisio2.sh  pathvisio_webstart_v2.sh  plugin-common.xml  pom.xml  pv2_daily.sh  pv_checks.xml  pv_daily.sh  readme.md  readme.txt  run_webstart.sh  test-procedure.txt
.github/workflows/: ant.yml
Ensembl work/: Ensembl.bat  UpdateEnsemblDatabase.java  read_ID.txt  read_fundamental.txt
JNLP-INF/: APPLICATION_TEMPLATE.JNLP
MVCtryout/: build.xml
Presentation/: GMML-Vision Sjoerd.ppt  Gmml-Vision.ppt  Thumbs.db  achtergrond.cdr
R/: build.xml
R/GmmlR/: DESCRIPTION
R/functions/: mappFinder.R  zscore.R
R/pathVisio/: DESCRIPTION  NAMESPACE
RFunctions/: mappFinder.r
api-doc/: builddoc.bat
documentation/: OverzichtTotaalProgramma.doc  structuur.doc
ensembl2visio/: Ensembl2Visio.java  fetchFromEns.pl
example-data/: Hs_Apoptosis.mapp  Hs_Apoptosis.xml  Hs_Cell_cycle_KEGG.gpml  Hs_Cell_cycle_KEGG.mapp  Hs_Cell_cycle_KEGG.xml  Hs_DNA_replication_Reactome.gpml  Hs_DNA_replication_Reactome.mapp  Hs_DNA_replication_Reactome.xml  Hs_G13_Signaling_Pathway.gmml  Hs_G13_Signaling_Pathway.gpml  Hs_G13_Signaling_Pathway.mapp  Hs_G1_to_S_cell_cycle_Reactome.mapp  Hs_G1_to_S_cell_cycle_Reactome.xml  Label_test.gpml  Shape_test.gpml  Shape_test.mapp  csv_data.csv  excel_2_data.xls  fillcolor_test.gpml  fillcolor_test.mapp  mim-test.gpml  position_test.gpml  sample_data_1.csv  sample_data_1.txt  sample_data_1_negatief.txt  sample_data_european.csv  sample_data_long_headers.txt  sample_data_many_columns.txt  sample_data_no_header.txt  sample_data_two_row_header.txt  sample_data_with_text.txt  sample_sgd.txt
expressionParser/: Main.java
gdb2visio/: TestData.java  TestDbPerformance.java  TestInputGroup.java
gmml_mapp_examples/: Hs_DNA_replication_Reactome.xml  Hs_G13_Signaling_Pathway.xml
jdom-xmlparser/: JDOMValidator.java
lib/: .classpath  csr.txt  visioKeyStore
lib/swt-mac-lib/: libswt-agl-carbon-3333.jnilib  libswt-xulrunner-carbon-3333.jnilib
modules/: README.txt  pom.xml
modules/org.pathvisio.core/: .classpath  .gitignore  .project  build.properties  build.xml  org.pathvisio.core.bnd  package.bnd  pom.xml
modules/org.pathvisio.data/: .classpath  .project  build.xml  pom.xml
modules/org.pathvisio.desktop/: .classpath  .project  build.xml  pom.xml
modules/org.pathvisio.exe/: pom.xml
modules/org.pathvisio.gex/: .project  build.properties  build.xml  package.bnd  pom.xml
modules/org.pathvisio.gui/: .project  build.xml  org.pathvisio.gui.bnd  package.bnd  pom.xml
modules/org.pathvisio.inforegistry/: build.xml
modules/org.pathvisio.launcher/: .project  build.xml  pom.xml
modules/org.pathvisio.pluginmanager/: .project  build.xml  pom.xml
modules/org.pathvisio.statistics/: .project  build.xml  package.bnd  pom.xml
modules/org.pathvisio.visualization/: .project  build.xml  pom.xml
modules/org.wikipathways.applet/: build.xml  package.bnd
modules/org.wikipathways.client/: build.xml  package.bnd
plugins/R/: build.xml
plugins/TestDropDown/: build.xml
plugins/hello/: build.xml
plugins/hmdbppp/: HmdbPppPlugin.java  build.xml
plugins/visualization-old/: ExpressionAsTextPlugin.java  ExpressionImagePlugin.java  LabelPlugin.java  PluginWithColoredSamples.java
rfc/: 001-swt-vs-swing.txt  002-connectors.txt  007-stable-api.txt  008-any-attribute.txt  009-gdb-refactoring.txt  010-gdb-schema-update  012-wikipathways-roadmap
scripts/: gpmldiff.sh  gpmlpatch.sh
src/: GMML_compat.xsd  GmmlArc.java  GmmlBpBrowser.java  GmmlBrace.java  GmmlColorConvertor.java  GmmlConnection.java  GmmlData.java  GmmlDrawing.java  GmmlDrawingObject.java  GmmlGdb.java  GmmlGeneProduct.java  GmmlGraphics.java  GmmlGraphicsUtils.java  GmmlHandle.java  GmmlLabel.java  GmmlLine.java  GmmlLineShape.java  GmmlMappInfo.java  GmmlPropertyTable.java  GmmlReader.java  GmmlSelectionBox.java  GmmlShape.java  GmmlVision.java  MANIFEST.MF  TODO.txt  gmml-visio.iss  todo.tab  todo.xls
src/R/: RCommands.java  RController.java  RData.java  RDataIn.java  RDataOut.java  RFunctionLoader.java  RWindow.java
src/attic/: GmmlFilter.java
src/backpage/: header.html
src/colorSet/: ColorSetWindow.java  CriterionComposite.java  (+4 more)
testData/: 2008a-deprecation-test.gpml  WP248_2008a.gpml  WP248_2010a.gpml  deprecated-shapes.gpml  mpoint-test.gpml  shapes.gpml  test.gpml  test2.gpml
tools/: readme.txt
trunk/: .gitignore  CLASSPATH  CONTRIBUTORS.txt  GMML_compat.xsd  GPML.xsd  MAPPTmpl.gtp  NOTICE.txt  PathVisio.ipr  SciTE.properties  build-common.xml  build.xml  convert.sh  diffview.sh  gmml-visio.bat  gmml-visio.iss  gmml-visio.sh  gpmldiff.sh  gpmlpatch.sh  header.txt  pathvisio.bat  pathvisio.iss  pathvisio.sh  pathvisio2.sh  plugin-common-future.xml  plugin-common.xml  readme.txt  remove_signature.sh  test-procedure.txt
trunk/tools/GmmlVisio2R/JRI/: Makefile.in  Makevars.win  RBool.java  RConsoleOutputStream.java  REXP.java  RFactor.java  RList.java  RMainLoopCallbacks.java  RVector.java  Rengine.java  configure.ac
trunk/tools/GmmlVisio2R/JRI/bootstrap/: Boot.java  DelegatedClassLoader.java  DelegatedURLClassLoader.java  JRIBootstrap.java
trunk/tools/GmmlVisio2R/JRI/examples/: rtest.java  rtest2.java
trunk/tools/GmmlVisio2R/JRI/src/: Makefile.all  Makefile.win  Rcallbacks.c  Rengine.c  Rinit.c  jri.c  jri.h  rjava.c
trunk/tools/GmmlVisio2R/JRI/src/win32/: Makefile
trunk/tools/GmmlVisio2R/JRI/tools/: getsp.java
webstart/: autoftp.pl  gmmlvisio.jnlp  pathvisio.jnlp  pathvisio_v1.jnlp  pathvisio_v2.jnlp  pathvisio_with_plugins.jnlp  wrapper.jnlp
wikipathways/: LocalSettings.php  LocalSettings.php~
www/: index.html
xml-import test/: Echo07.java  WindowUtilities.java
(+5955 files in other folders)
